Bug 481950 - Hildon -  Entering caps or special characters using hardware keyboard in password fields is broken. r=masayuki@d-toybox.com